--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {},
   "devDependencies": {
     "serverless-cloudside-plugin": "^1.0.3",
-    "serverless-python-requirements": "^5.0.0"
+    "serverless-python-requirements": "^5.0.0",
+    "serverless-s3-deploy": "^0.8.2"
   }
 }
