--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+aiohttp==3.6.2
 airtable-python-wrapper==0.12.0
 asn1crypto==1.0.0
 astroid==2.3.1
+async-timeout==3.0.1
+attrs==19.2.0
 boto3==1.9.242
 botocore==1.12.242
 certifi==2019.9.11
@@ -14,6 +17,7 @@ isort==4.3.21
 jmespath==0.9.4
 lazy-object-proxy==1.4.2
 mccabe==0.6.1
+multidict==4.5.2
 pycparser==2.19
 PyGithub==1.43.8
 PyJWT==1.7.1
@@ -22,6 +26,8 @@ python-dateutil==2.8.0
 requests==2.22.0
 s3transfer==0.2.1
 six==1.12.0
+slackclient==2.2.1
 typed-ast==1.4.0
 urllib3==1.25.6
 wrapt==1.11.2
+yarl==1.3.0
