--- a/serverless.yml
+++ b/serverless.yml
@@ -1,16 +1,25 @@
 service: labby
 
 plugins:
+  # https://github.com/UnitedIncome/serverless-python-requirements
   - serverless-python-requirements
   - serverless-cloudside-plugin
   - serverless-s3-deploy
 
+package:
+  exclude:
+    - node_modules/**
+    - assets/**
+    - tests/**
+
 custom:
+  # Python requirements plugin configuration
   pythonRequirements:
-    dockerizePip: non-linux
+    slim: true
+    dockerizePip: true
 
+  # S3 deploy plugin configuration
   public-asset-bucket: labby-public-assets
-
   assets:
     auto: true
     targets:
@@ -31,7 +40,7 @@ provider:
     - Effect: "Allow"
       Action:
         - "sqs:SendMessage"
-      Resource: !GetAtt DirtyReposQueue.Arn
+      Resource: !GetAtt CodeClimateRepoWorkerQueue.Arn
     - Effect: "Allow"
       Action:
         - "s3:ListBucket"
@@ -63,76 +72,77 @@ provider:
     # Note: This is temporary until the Github App API catches up with the personal API
     GITHUB_PERSONAL_ACCESS_TOKEN: ${ssm:/aws/reference/secretsmanager/labby-github-personal-access-token~true}
 
-    # # API key for getting into Airtable
+    # API key for Airtable
     AIRTABLE_API_KEY: ${ssm:/aws/reference/secretsmanager/labby-airtable-api-key~true}
 
-    # # Locators for project repo information
-    # AIRTABLE_BASE_ID: ${ssm:/aws/reference/secretsmanager/labby-airtable-base-id~true}
-    # AIRTABLE_PROJECT_REPO_TABLE_NAME: ${ssm:/aws/reference/secretsmanager/labby-airtable-project-repo-table-name~true}
-
+    # API key for Code Climate
     CODE_CLIMATE_API_KEY: ${ssm:/aws/reference/secretsmanager/labby-code-climate-api-key~true}
 
+    # API key for Slack
     SLACK_API_TOKEN: ${ssm:/aws/reference/secretsmanager/labby-slack-api-token~true}
 
 functions:
-  enqueue_all_accounts:
-    handler: codeclimate/handler.enqueue_all_accounts
+  codeclimate_enqueue_all_product_repos:
+    handler: codeclimate/handler.enqueue_all_product_repos
+    description: Gets a list of all current product repositories and queues them up in SQS for processing.
     environment:
-      DIRTY_REPOS_SQS_URL: !Ref DirtyReposQueue
+      CODECLIMATE_REPO_WORKER_SQS_URL: !Ref CodeClimateRepoWorkerQueue
     events:
       - schedule:
-          name: reconcile-all-repos
-          description: "Queue up all repositories periodically to be reconciled"
-          rate: rate(60 minutes)
+          name: codeclimate_enqueue_all_product_repos
+          description: "Runs codeclimate_enqueue_all_product_repos"
+          rate: rate(15 minutes)
 
-  reconcile_accounts:
-    handler: codeclimate/handler.reconcile_accounts
+  codeclimate_gather_code_climate_metrics:
+    handler: codeclimate/handler.gather_code_climate_metrics
+    description: Processes a batch of messages containing Github repository IDs, gathering Code Climate metrics for each repository.
     events:
       - sqs:
-          arn: !GetAtt DirtyReposQueue.Arn
+          arn: !GetAtt CodeClimateRepoWorkerQueue.Arn
           batchSize: 10
 
-  drop_quotes:
-    handler: slackquotes/handler.drop_quotes
+  slack_drop_quotes:
+    handler: slack/quotes.drop_quotes
+    description: Drops quotes into specified Slack channels.
     events:
       - schedule: cron(0 15 ? * MON-FRI *)
 
-  # Handles reminding students about submitting peer reviews
-  remind_students_about_late_peer_reviews:
-    handler: peerreviews/handler.remind_students_about_late_peer_reviews
-    # events:
-    #   - schedule: cron(0 23 ? * FRI *)
+  # Under construction
+  # remind_students_about_late_peer_reviews:
+  #   handler: peerreviews/handler.remind_students_about_late_peer_reviews
+  #   events:
+  #     - schedule: cron(0 23 ? * FRI *)
 
-  # Reconciles all Github repos with the stored metadata
-  reconcile_all_project_github_repos:
-    handler: projectrepos/handler.reconcile_all_project_github_repos
+  github_repos_provision_product_repos:
+    handler: github/repos.provision_product_repos
+    description: Ensures all product repos are provisioned or adopted.
     events:
       - schedule:
-          name: reconcile-all-project-github-repos
-          description: "Ensure Github repositories are synced with repository metadata store"
+          name: reconcile-all-github_provision_product_repos-github-repos
+          description: "Runs github_provision_product_repos"
           rate: rate(15 minutes)
 
-  # Handles Github push hook events
-  github_push_hook:
-    handler: githubhooks/handler.github_push_hook
+  github_metrics_push_hook:
+    handler: github/metrics.push_hook
     events:
       - http: POST github_push
 
-  # Reconciles all Github push events
-  reconcile_github_push_events:
-    handler: githubhooks/handler.reconcile_github_push_events
-
+  # Under construction
+  # github_reconcile_push_events:
+  #   handler: github/handler.reconcile_push_events
+  #   description: Processes all push events in an organization and updates metrics.
+  # Under construction
   # Notifies interviewees to schedule their mock interview
-  notify_interviewees:
-    handler: mock_interviews/handler.notify_interviewees
+  # notify_interviewees:
+  #   handler: mock_interviews/handler.notify_interviewees
 
 resources:
   Resources:
-    # A queue for processing dirty Github repos
-    DirtyReposQueue:
+    # For queuing up jobs for the Code Climate Repo
+    CodeClimateRepoWorkerQueue:
       Type: "AWS::SQS::Queue"
       Properties:
-        QueueName: "DirtyRepos"
+        QueueName: "CodeClimateRepoWorkerQueue"
 
     # A bucket for storing public-facing assets
     PublicAssetBucket:
@@ -141,6 +151,8 @@ resources:
         BucketName: ${self:custom.public-asset-bucket}
         AccessControl: PublicRead
 
+    # A place for Labby to remember stuff
+    # This is ephemeral state information for Labby
     LabbyMemory:
       Type: AWS::DynamoDB::Table
       Properties:
