--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "description": "",
   "version": "0.1.0",
   "dependencies": {
-    "serverless-dotenv-plugin": "^2.1.1"
-  },
-  "devDependencies": {
+    "serverless-dotenv-plugin": "^2.1.1",
     "serverless-cloudside-plugin": "^1.0.3",
     "serverless-offline": "^5.12.1",
     "serverless-python-requirements": "^5.0.1",
