--- a/.github/workflows/master-push.yml
+++ b/.github/workflows/master-push.yml
@@ -7,19 +7,14 @@ on:
 
 jobs:
   coverage:
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        python: [3.7, 3.8]
-    name: ${{ matrix.os }}/${{ matrix.python }}
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@master
 
       - uses: actions/setup-python@v1
         with:
-          python-version: ${{ matrix.python }}
+          python-version: 3.7
 
       - uses: dschep/install-pipenv-action@v1
 
