--- a/.github/workflows/master-push.yml
+++ b/.github/workflows/master-push.yml
@@ -19,6 +19,8 @@ jobs:
       - uses: dschep/install-pipenv-action@v1
 
       - run: pipenv install
+        env:
+          PIPENV_NOSPIN: 1
 
       - uses: paambaati/codeclimate-action@v2.4.0
         env:
