--- a/.github/workflows/master-push.yml
+++ b/.github/workflows/master-push.yml
@@ -26,5 +26,5 @@ jobs:
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CodeClimateReporterId }}
         with:
-          coverageCommand: coverage run -m unittest discover -s tests
+          coverageCommand: pipenv run coverage run -m unittest discover -s tests
           debug: true
