--- a/.github/workflows/master-push.yml
+++ b/.github/workflows/master-push.yml
@@ -18,7 +18,7 @@ jobs:
 
       - uses: dschep/install-pipenv-action@v1
 
-      - run: pipenv install --dev
+      - run: make install-dev
         env:
           PIPENV_NOSPIN: 1
 
@@ -26,5 +26,5 @@ jobs:
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CodeClimateReporterId }}
         with:
-          coverageCommand: pipenv run coverage run -m unittest discover -s tests && pipenv run coverage xml
+          coverageCommand: make coverage-xml
           debug: true
