--- a/Pipfile
+++ b/Pipfile
@@ -4,24 +4,23 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [requires]
-python_version = "3"
+python_version = "3.8"
 
 [dev-packages]
 pytest = "*"
-autopep8 = "*"
-pylint = "*"
-bandit = "*"
-flake8 = "*"
-mypy = "*"
 mock = "*"
 coverage = "*"
+boto3 = "*"
+black = "==19.10b0"
+flake8 = "*"
 
 [packages]
 requests = "*"
-boto3 = "*"
-boto3-stubs = {extras = ["dynamodb"],version = "*"}
-boto3_type_annotations_with_docs = "*"
 jwt = "*"
 pygithub = "*"
 slackclient = "*"
 airtable-python-wrapper = "*"
+botostubs = "*"
+
+[pipenv]
+allow_prereleases = true
