--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "serverless-offline": "^6.1.5",
     "serverless-python-requirements": "^5.1.0",
     "serverless-s3-deploy": "^0.9.0"
+  },
+  "dependencies": {
+    "serverless-step-functions": "^2.22.1"
   }
 }
