--- a/serverless.yml
+++ b/serverless.yml
@@ -33,6 +33,7 @@ custom:
 
 provider:
   name: aws
+  role: DefaultFunctionRole
   runtime: python3.8
   memorySize: 256
   logRetentionInDays: 14
@@ -42,26 +43,6 @@ provider:
   tracing:
     apiGateway: false
     lambda: true
-  iamManagedPolicies:
-    - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
-  iamRoleStatements:
-    - Effect: "Allow"
-      Action:
-        - "sqs:SendMessage"
-      Resource:
-        - !GetAtt QueueCodeClimateRepoWorkerQueue.Arn
-        - !GetAtt QueueGithubRepoConfigurationWorker.Arn
-    - Effect: "Allow"
-      Action:
-        - "s3:ListBucket"
-      Resource: "arn:aws:s3:::${self:custom.public-asset-bucket}"
-    - Effect: Allow
-      Action:
-        - "s3:PutObject"
-        - "s3:PutObjectAcl"
-        - "s3:GetObject"
-        - "s3:DeleteObject"
-      Resource: "arn:aws:s3:::${self:custom.public-asset-bucket}/*"
 
   tags:
     poweredby: labby
@@ -148,6 +129,68 @@ functions:
 
 resources:
   Resources:
+    DefaultFunctionRole:
+      Type: AWS::IAM::Role
+      Properties:
+        Path: /
+        RoleName: labby
+        AssumeRolePolicyDocument:
+          Version: "2012-10-17"
+          Statement:
+            - Effect: Allow
+              Principal:
+                Service:
+                  - lambda.amazonaws.com
+              Action: sts:AssumeRole
+        ManagedPolicyArns:
+          - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+        Policies:
+          - PolicyName: Defaults
+            PolicyDocument:
+              Version: "2012-10-17"
+              Statement:
+                - Effect: Allow
+                  Action:
+                    - logs:CreateLogGroup
+                    - logs:CreateLogStream
+                    - logs:PutLogEvents
+                  Resource:
+                    - "Fn::Join":
+                        - ":"
+                        - - "arn:aws:logs"
+                          - Ref: "AWS::Region"
+                          - Ref: "AWS::AccountId"
+                          - "log-group:/aws/lambda/*:*:*"
+                - Effect: "Allow"
+                  Action:
+                    - "s3:PutObject"
+                  Resource:
+                    Fn::Join:
+                      - ""
+                      - - "arn:aws:s3:::"
+                        - "Ref": "ServerlessDeploymentBucket"
+                - Effect: "Allow"
+                  Action:
+                    - "sqs:SendMessage"
+                  Resource:
+                    - !GetAtt QueueCodeClimateRepoWorkerQueue.Arn
+                    - !GetAtt QueueGithubRepoConfigurationWorker.Arn
+                - Effect: "Allow"
+                  Action:
+                    - "s3:ListBucket"
+                  Resource: "arn:aws:s3:::${self:custom.public-asset-bucket}"
+                - Effect: Allow
+                  Action:
+                    - "s3:PutObject"
+                    - "s3:PutObjectAcl"
+                    - "s3:GetObject"
+                    - "s3:DeleteObject"
+                  Resource: "arn:aws:s3:::${self:custom.public-asset-bucket}/*"
+                # Allow this role to assume 'labby' roles in any other account
+                - Effect: Allow
+                  Action: "sts:AssumeRole"
+                  Resource: "arn:aws:iam::*:role/labby"
+
     # For queuing up jobs for the Code Climate Repo
     QueueCodeClimateRepoWorkerQueue:
       Type: "AWS::SQS::Queue"
