--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serverless-cloudside-plugin": "^1.0.3",
     "serverless-dotenv-plugin": "^2.4.2",
     "serverless-offline": "^6.1.5",
+    "serverless-offline-sqs": "^4.1.0",
     "serverless-python-requirements": "^5.1.0",
     "serverless-s3-deploy": "^0.9.0"
   }
