--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "python.linting.banditEnabled": false,
   "python.linting.flake8Enabled": true,
-  "python.linting.enabled": true,
+  "python.linting.enabled": false,
   "python.testing.unittestArgs": [
     "-v",
     "-s",
@@ -12,5 +12,6 @@
   "python.testing.pytestEnabled": false,
   "python.testing.nosetestsEnabled": false,
   "python.testing.unittestEnabled": true,
-  "python.linting.mypyEnabled": false
+  "python.linting.mypyEnabled": false,
+  "python.pythonPath": ".venv/bin/python"
 }
