--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [requires]
-python_version = "3.8"
+python_version = "3.9"
 
 [dev-packages]
 pytest = "*"
@@ -22,6 +22,7 @@ pygithub = "*"
 slackclient = "~=2.5.0"
 airtable-python-wrapper = "*"
 botostubs = "*"
+coverage = "*"
 
 [pipenv]
 allow_prereleases = true
